added Home page

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,6 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="/dist/output.css" rel="stylesheet" />
 
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-      integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
-      crossorigin="anonymous"
-    />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>AndewDobr</title>
@@ -23,13 +16,17 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+    <!-- <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
     ></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script> -->
+    <script
+      src="https://kit.fontawesome.com/2ffebd6cbd.js"
+      crossorigin="anonymous"
     ></script>
   </body>
 </html>
