--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,9 @@
       src="https://kit.fontawesome.com/2ffebd6cbd.js"
       crossorigin="anonymous"
     ></script>
+    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
+    <script>
+      var scroll = new SmoothScroll('a[href*="#"]')
+    </script>
   </body>
 </html>
